Fixed newscard overflow bug

--- a/src/globals.css
+++ b/src/globals.css
@@ -33,10 +33,9 @@
   border: 1px solid rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   text-align: center;
-  max-width: 45%;
+  max-width: 40%;
   width: fit-content;
   overflow-x: hidden;
 }
@@ -45,9 +44,9 @@
 }
 
 .news-list {
-  list-style: none;
-  width: fit-content;
   display: flex;
+  list-style: none;
+  width: 80%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -56,12 +55,14 @@
 }
 
 .news-item {
+  display: flex;
+  flex-direction: column;
   border: 1px solid white;
   margin-bottom: 20px;
   border-radius: 5px;
-  max-width: 80%;
-  text-align: center;
-  padding: 10px;
+
+
+
 }
 
 .news-link {
